--- a/Dad-Website/style.css
+++ b/Dad-Website/style.css
@@ -1,59 +1,22 @@
 *{
     box-sizing: border-box;
-}
-/*Page reset*/
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-	margin: 0;
+    margin: 0;
 	padding: 0;
 	border: 0;
 	font-size: 100%;
 	font: inherit;
 	vertical-align: baseline;
 }
-/* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section {
-	display: block;
-}
-body {
-	line-height: 1;
-}
-ol, ul {
-	list-style: none;
-}
-blockquote, q {
-	quotes: none;
-}
-blockquote:before, blockquote:after,
-q:before, q:after {
-	content: '';
-	content: none;
-}
-table {
-	border-collapse: collapse;
-	border-spacing: 0;
-}
-/*page reset*/
 a{
     text-decoration: none;
     color:black;
     text-align: right;
+    display: block;
 }
 nav .speed-test {
     text-decoration: none;
     text-align: right;
+    display: block;
 }
 h1{
     font-family: 'Barlow';
@@ -74,20 +37,23 @@ p{
     color: white;
     background-color: #212832;
     display: flex;
-    margin: 0;
-    padding: 0;
+    margin: 10px;
+    padding: 5px;
+    border-radius: 25px;
 }
 .plan2{
     color: black;
     background-color: #59B0E2;
     display: flex;
-    margin: 0;
-    padding: 0;
+    margin: 10px;
+    padding: 5px;
+    border-radius: 25px;
 }
 .plan3{
     color: white;
     background-color: #102B49;
     display: flex;
-    margin: 0;
-    padding: 0;
+    margin: 10px;
+    padding: 5px;
+    border-radius: 25px;
 }
