--- a/Dad-Website/style.css
+++ b/Dad-Website/style.css
@@ -12,6 +12,7 @@ a{
     color:black;
     text-align: right;
     display: block;
+    margin: 10px;
 }
 nav .speed-test {
     text-decoration: none;
@@ -30,30 +31,58 @@ h2{
 }
 p{
     font-family: 'Red Hat Mono';
-    font-size: 16px;
+    font-size: 30px;
     font-weight: 400;
+    display: inline-block;
 }
 .plan1{
     color: white;
     background-color: #212832;
+    height: auto;
     display: flex;
     margin: 10px;
-    padding: 5px;
+    padding: 8px;
     border-radius: 25px;
+    background-image: url(https://www.publicdomainpictures.net/pictures/160000/velka/ordinateur-de-bureau-pc-1456070535WEH.jpg);
+    background-size: 50%;
+    background-repeat: no-repeat;
+    background-position: right;
 }
 .plan2{
     color: black;
     background-color: #59B0E2;
+    height: auto;
     display: flex;
     margin: 10px;
-    padding: 5px;
+    padding: 8px;
     border-radius: 25px;
+    background-image: url(https://thumbs.dreamstime.com/b/internet-things-smart-home-automation-concept-138710878.jpg);
+    background-size: 50%;
+    background-repeat: no-repeat;
+    background-position: right;
 }
 .plan3{
     color: white;
     background-color: #102B49;
+    height: auto;
     display: flex;
     margin: 10px;
-    padding: 5px;
+    padding: 6px;
     border-radius: 25px;
+    background-image: url(https://media.istockphoto.com/photos/powerful-personal-computer-gamer-rig-with-firstperson-shooter-game-on-picture-id1157159213?k=20&m=1157159213&s=612x612&w=0&h=oYVqFen_st-jxHXy3KzZXmbaQlDwo06HJmbZDZJO7KE=);
+    background-size: 50%;
+    background-repeat: no-repeat;
+    background-position: right;
+}
+.inclusion{
+    text-align:left;
+}
+ul{
+    margin-left: 1rem;
+}
+li{
+    font-size: 24px;
+}
+.descrip{
+    width: 50%;
 }
